welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:21: error: Missing closing brace `}' assumed here
}
^